20130328/forward/tcpFWinet.rules
#!/bin/sh
. $MAS_IP_FUNCTIONS

cat << FIL

:tcpFWinet -


### -A tcpFWinet -j LOG --log-prefix "$IPT_PREF_PREF: $LOG_S_MARK tcp FW " $IPTABLES_LOG_OPTS

-A tcpFWinet -m tcp -p tcp -o $LAN_IFACE -i $INET_IFACE -d $MAC_LAN_ADDRESS -s $MSFT_ADDRESS_LIST -m multiport --sports $HTTP_PORTS -j dropFWinet -m comment --comment msft_mac
-A tcpFWinet -m tcp -p tcp -i $LAN_IFACE -o $INET_IFACE -s $MAC_LAN_ADDRESS -d $MSFT_ADDRESS_LIST -m multiport --dports $HTTP_PORTS -j dropFWinet -m comment --comment msft_mac


# android
-A tcpFWinet -m tcp -p tcp -o $LAN_IFACE -i $INET_IFACE -d $MAC_LAN_ADDRESS -m multiport --sports $HTTP_PORTS -j acptFWinet -m comment --comment android
-A tcpFWinet -m tcp -p tcp -i $LAN_IFACE -o $INET_IFACE -s $MAC_LAN_ADDRESS -m multiport --dports $HTTP_PORTS -j acptFWinet -m comment --comment android

# -A tcpFWinet -m tcp -p tcp -o $LAN_IFACE -i $INET_IFACE -d $MAC_LAN_ADDRESS              --sport 5228:5230   -j acptFWinet -m comment --comment android
# -A tcpFWinet -m tcp -p tcp -i $LAN_IFACE -o $INET_IFACE -s $MAC_LAN_ADDRESS              --dport 5228:5230   -j acptFWinet -m comment --comment android
-A tcpFWinet -m tcp -p tcp -o $LAN_IFACE -i $INET_IFACE -d $MAC_LAN_ADDRESS              --sport 5222:5230   -j acptFWinet -m comment --comment android
-A tcpFWinet -m tcp -p tcp -i $LAN_IFACE -o $INET_IFACE -s $MAC_LAN_ADDRESS              --dport 5222:5230   -j acptFWinet -m comment --comment android


-A tcpFWinet  -m tcp -p tcp -o $INET_IFACE -s $MAC_LAN_ADDRESS --dport 10041:10042 -j acptFWinet -m comment --comment t2skype


-A tcpFWinet -j dropFWinet


FIL
