20130328/forward/udpFWinet.rules
#!/bin/sh
. $MAS_IP_FUNCTIONS

cat << FIL



:udpFWinet -

### -A udpFWinet -j LOG --log-prefix "$IPT_PREF_PREF: $LOG_S_MARK udp FW " $IPTABLES_LOG_OPTS

-A udpFWinet -m udp -p udp -o $INET_IFACE --dport domain -j acptFWinet
-A udpFWinet -m udp -p udp -i $INET_IFACE --sport domain -j acptFWinet

# Skype
-A udpFWinet -m udp -p udp  -s $MAC_LAN_ADDRESS -m multiport --sports 64231,51634,36493,63700 -j acptFWinet -m comment --comment skype-fw
-A udpFWinet -m udp -p udp  -d $MAC_LAN_ADDRESS -m multiport --sports 64231,51634,36493,63700 -j acptFWinet -m comment --comment skype-fw
-A udpFWinet -m udp -p udp  -s $MAC_LAN_ADDRESS -m multiport --dports 64231,51634,36493,63700 -j acptFWinet -m comment --comment skype-fw
-A udpFWinet -m udp -p udp  -d $MAC_LAN_ADDRESS -m multiport --dports 64231,51634,36493,63700 -j acptFWinet -m comment --comment skype-fw

-A udpFWinet -m tcp -p tcp  -d $MAC_LAN_ADDRESS --sport 40000:49500  -j acptFWinet -m comment --comment skype-fw
-A udpFWinet -m tcp -p tcp  -s $MAC_LAN_ADDRESS --sport 40000:49500  -j acptFWinet -m comment --comment skype-fw

-A udpFWinet -m udp -p udp  -d $MAC_LAN_ADDRESS --sport 40000:49500  -j acptFWinet -m comment --comment skype-fw
-A udpFWinet -m udp -p udp  -d $MAC_LAN_ADDRESS --dport 40000:49500  -j acptFWinet -m comment --comment skype-fw
-A udpFWinet -m udp -p udp  -s $MAC_LAN_ADDRESS --sport 40000:49500  -j acptFWinet -m comment --comment skype-fw


-A udpFWinet -m udp -p udp  -d $MAC_LAN_ADDRESS --sport ntp  -j acptFWinet -m comment --comment time
-A udpFWinet -m udp -p udp  -s $MAC_LAN_ADDRESS --dport ntp  -j acptFWinet -m comment --comment time


# -A udpFWinet -j LOG --log-prefix "$IPT_PREF_PREF: $LOG_Q_MARK udp fw inet " $IPTABLES_LOG_OPTS
-A udpFWinet -j dropFWinet


FIL
